--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1445,14 +1445,6 @@ select {
   cursor: pointer;
 }
 
-.cursor-help {
-  cursor: help;
-}
-
-.cursor-wait {
-  cursor: wait;
-}
-
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -1582,12 +1574,12 @@ select {
   gap: 0.5rem;
 }
 
-.gap-0 {
-  gap: 0px;
-}
-
 .gap-7 {
   gap: 1.75rem;
+}
+
+.gap-0 {
+  gap: 0px;
 }
 
 .gap-1 {
@@ -1805,6 +1797,11 @@ select {
   border-width: 4px;
 }
 
+.border-x-0 {
+  border-left-width: 0px;
+  border-right-width: 0px;
+}
+
 .border-b-4 {
   border-bottom-width: 4px;
 }
@@ -1829,16 +1826,20 @@ select {
   border-right-width: 0px;
 }
 
+.border-t-0 {
+  border-top-width: 0px;
+}
+
+.border-l-0 {
+  border-left-width: 0px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
 
 .border-l-2 {
   border-left-width: 2px;
-}
-
-.border-t-0 {
-  border-top-width: 0px;
 }
 
 .border-dashed {
@@ -2701,6 +2702,11 @@ select {
   color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
+.text-cyan-900 {
+  --tw-text-opacity: 1;
+  color: rgb(22 78 99 / var(--tw-text-opacity));
+}
+
 .text-cyan-200 {
   --tw-text-opacity: 1;
   color: rgb(165 243 252 / var(--tw-text-opacity));
@@ -2724,11 +2730,6 @@ select {
 .text-red-800 {
   --tw-text-opacity: 1;
   color: rgb(153 27 27 / var(--tw-text-opacity));
-}
-
-.text-cyan-900 {
-  --tw-text-opacity: 1;
-  color: rgb(22 78 99 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -3874,6 +3875,18 @@ svg #main-circ {
   border-color: rgb(55 65 81 / var(--tw-divide-opacity));
 }
 
+.dark .dark\:border {
+  border-width: 1px;
+}
+
+.dark .dark\:border-t-2 {
+  border-top-width: 2px;
+}
+
+.dark .dark\:border-none {
+  border-style: none;
+}
+
 .dark .dark\:border-gray-800 {
   --tw-border-opacity: 1;
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
@@ -3969,6 +3982,11 @@ svg #main-circ {
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -4032,6 +4050,11 @@ svg #main-circ {
 .dark .dark\:text-gray-50 {
   --tw-text-opacity: 1;
   color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-black {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .dark .dark\:placeholder-gray-500::-moz-placeholder {
