--- a/public/css/output.css
+++ b/public/css/output.css
@@ -4530,3 +4530,14 @@ svg #main-circ {
     width: 33.333333%;
   }
 }
+
+.filterActive {
+  border-radius: 0.375rem !important;
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+  --tw-bg-opacity: 1 !important;
+  padding-left: 0.75rem !important;
+  padding-right: 0.75rem !important;
+}
