--- a/public/css/output.css
+++ b/public/css/output.css
@@ -2907,6 +2907,12 @@ select {
   transition-duration: 150ms;
 }
 
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -4529,15 +4535,4 @@ svg #main-circ {
   .\32xl\:w-4\/12 {
     width: 33.333333%;
   }
-}
-
-.filterActive {
-  border-radius: 0.375rem !important;
-  --tw-text-opacity: 1 !important;
-  color: rgb(0 0 0 / var(--tw-text-opacity)) !important;
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
-  --tw-bg-opacity: 1 !important;
-  padding-left: 0.75rem !important;
-  padding-right: 0.75rem !important;
 }
