--- a/public/css/output.css
+++ b/public/css/output.css
@@ -732,10 +732,6 @@ select {
   top: 1.25rem;
 }
 
-.bottom-4 {
-  bottom: 1rem;
-}
-
 .top-1\/2 {
   top: 50%;
 }
@@ -746,6 +742,10 @@ select {
 
 .bottom-5 {
   bottom: 1.25rem;
+}
+
+.bottom-4 {
+  bottom: 1rem;
 }
 
 .z-40 {
@@ -810,10 +810,6 @@ select {
 
 .row-end-3 {
   grid-row-end: 3;
-}
-
-.float-left {
-  float: left;
 }
 
 .m-4 {
@@ -1203,16 +1199,16 @@ select {
   height: 1.75rem;
 }
 
+.h-56 {
+  height: 14rem;
+}
+
 .h-72 {
   height: 18rem;
 }
 
 .h-1 {
   height: 0.25rem;
-}
-
-.h-56 {
-  height: 14rem;
 }
 
 .max-h-36 {
@@ -2138,6 +2134,10 @@ select {
   background-color: rgb(13 148 136 / var(--tw-bg-opacity));
 }
 
+.bg-white\/30 {
+  background-color: rgb(255 255 255 / 0.3);
+}
+
 .bg-gray-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
@@ -2151,14 +2151,6 @@ select {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
-
-.bg-white\/30 {
-  background-color: rgb(255 255 255 / 0.3);
-}
-
-.bg-white\/50 {
-  background-color: rgb(255 255 255 / 0.5);
 }
 
 .bg-opacity-50 {
@@ -2813,6 +2805,11 @@ select {
   color: rgb(153 27 27 / var(--tw-text-opacity));
 }
 
+.text-yellow-100 {
+  --tw-text-opacity: 1;
+  color: rgb(254 249 195 / var(--tw-text-opacity));
+}
+
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -2988,12 +2985,6 @@ select {
 
 .transition-shadow {
   transition-property: box-shadow;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-opacity {
-  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -3687,11 +3678,6 @@ svg #main-circ {
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-opacity-5:hover {
   --tw-bg-opacity: 0.05;
 }
@@ -3773,11 +3759,6 @@ svg #main-circ {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.hover\:outline-none:hover {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
 .hover\:ring-2:hover {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -3847,11 +3828,6 @@ svg #main-circ {
 .focus\:text-gray-600:focus {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
-.focus\:no-underline:focus {
-  -webkit-text-decoration-line: none;
-          text-decoration-line: none;
 }
 
 .focus\:placeholder-gray-500:focus::-moz-placeholder {
@@ -4102,17 +4078,18 @@ svg #main-circ {
   background-color: rgb(20 184 166 / var(--tw-bg-opacity));
 }
 
+.dark .dark\:bg-gray-800\/30 {
+  background-color: rgb(31 41 55 / 0.3);
+}
+
 .dark .dark\:bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
-.dark .dark\:bg-gray-800\/30 {
-  background-color: rgb(31 41 55 / 0.3);
-}
-
-.dark .dark\:bg-gray-800\/50 {
-  background-color: rgb(31 41 55 / 0.5);
+.dark .dark\:text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .dark .dark\:text-cyan-400 {
@@ -4316,12 +4293,12 @@ svg #main-circ {
     display: none;
   }
 
-  .sm\:h-10 {
-    height: 2.5rem;
-  }
-
   .sm\:h-64 {
     height: 16rem;
+  }
+
+  .sm\:h-10 {
+    height: 2.5rem;
   }
 
   .sm\:h-6 {
