--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1179,6 +1179,10 @@ select {
   height: 13rem;
 }
 
+.h-96 {
+  height: 24rem;
+}
+
 .h-80 {
   height: 20rem;
 }
@@ -2172,6 +2176,11 @@ select {
 .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-indigo-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 102 241 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -3712,6 +3721,11 @@ svg #main-circ {
 .hover\:bg-red-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-indigo-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-opacity-5:hover {
